--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -7,6 +7,9 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1" target="_blank">中共人质外交威胁美加 专家：流氓本性使然</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-150x120.jpg" align ="left"></a>近日，中共不仅威胁要抓捕在华的美国人以报复美国合法起诉中共军方学者，甚至以在港30万加拿大人的人身安全为要挟，要加拿大政府不要给予香港人政治庇护。专家表示，中共是土匪出身，人质绑架是其政党基因里自带的邪恶。中共的所为向外界公开展示了其流氓无赖的本性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 7:19 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486089.md#1" target="_blank">田云：推特涉嫌干预美大选 言论审查水多深？</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486089.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/24902f38edac31c9-150x120.jpg" align ="left"></a>科技巨头竟然大搞言论审查，美版404的背后有哪些因素作怪？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 4:29 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486027.md#1" target="_blank">丑闻爆发前 脸书推特高层加入拜登竞选团队</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486027.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228999788-150x120.jpg" align ="left"></a>《纽约邮报》日前登出民主党候选人拜登父的贪腐丑闻，不过立即遭到脸书（Facebook）和推特（Twitter）以“等候事实查核”为由的直接封锁，此事也让拜登竞选团队与科技巨头的深厚关系浮上台面，引起网路上许多批评。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 4:19 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484974.md#1" target="_blank">抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484974.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/CP18954986-150x120.jpg" align ="left"></a>过去一周（美国时间10月12日至18日），美国宣布在年底前关闭充当中共大外宣的孔子学院，并拟对中国联通、中国航空工业集团公司、蚂蚁集团等企业进行制裁。同时，欧盟也开始加征中国铝制品的反倾销关税，欧洲议会议员联合呼吁欧盟制裁华为、中兴。
+
+而在中共方面，中共不但威胁30万在港加拿大人的安全，招致加拿大总理、外交部部长及保守党领袖的狠批外，中共还威胁要抓美国.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 3:39 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485477.md#1" target="_blank">中共外交官闯台外馆国庆酒会打伤人 台抗议</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485477.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/fe83448f748c2ea6be9a1ab534a9a78a-150x120.jpg" align ="left"></a>中华民国国庆是10月10日，外媒报导，台湾驻斐济代表处8日举行国庆酒会，遭中共大使馆人员硬闯入还打伤人。对此，外交部19日强烈谴责中共挑衅的战狼外交做法。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 2:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/Biden-and-Trump-700x420-150x120.jpg" align ="left"></a>拜登悬了？左派计划暴动。中共五中全会或震荡。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 1:48 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485442.md#1" target="_blank">华为大势已去？跨大西洋联盟打造清洁网络</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485442.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-1-150x120.jpg" align ="left"></a>美国禁令使华为芯片断供，使其高端手机发展受重创；美国国务院更是在全球范围内推广“清洁网络”计划。10月17日，国务院发表声明，介绍跨大西洋联盟打造干净网络详细情况，透露华为在欧洲大势已去的局面。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 11:31 AM							</td></tr>
@@ -41,6 +44,5 @@ WHO：欧洲某些地区的重症监护病房近满员
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12476425.md#1" target="_blank">受中共科技专制拖累 科企出国路几近被堵死</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12476425.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-969527060-600x400-1-150x120.jpg" align ="left"></a>在中共病毒肆虐的当下，科技与道德成了全球政府的关注点。中共对中国科技公司的控制带来国家安全威胁，迫使美国不得不出手反制，中共科技专制几乎封死了中国科企在海外的出路。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 5:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-150x120.jpg" align ="left"></a>这两条消息很不寻常。大选进入白热化阶段之际，拜登竞选团队忽然灭自家威风，这是在为败选打预防针吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 3:18 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480830.md#1" target="_blank">【重播】川普威斯康星州演讲 支持执法机构</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480830.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229134416-150x120.jpg" align ="left"></a>周六（10月17日）晚19:00（美东），美国总统川普在威斯康星州发表演讲 支持美国执法机构。大纪元将进行现场直播（中文同声翻译）......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 8:21 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483509.md#1" target="_blank">拜登电脑门 美参议员要FBI回答六大问题</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483509.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/05/190502194119100699-150x120.jpg" align ="left"></a>美国联邦参议员、国土安全与政府事务委员会主席罗恩?约翰逊（Ron Johnson）周六（10月17日）致函给联邦调查局（FBI）局长，要求FBI在下周四（22日）之前回答，他们是如何处理亨特?拜登（Hunter Biden）的笔记本电脑资料的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 7:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
