--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9958294.md#1" target="_blank">金剑：中央集权制绝对不是封建社会（之二）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/1/n10823173.md#1" target="_blank">【还原史实】中共“大跃进” 四千万中国人活活饿死</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
